WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78996
Fails to build on platforms where UChar is wchar_t
https://bugs.webkit.org/show_bug.cgi?id=78996
Summary
Fails to build on platforms where UChar is wchar_t
Kalev Lember
Reported
2012-02-19 09:54:22 PST
The ICU backend defines UChar as wchar_t on win32. Source/WebCore/platform/gtk/GtkPopupMenu.cpp: In member function 'bool WebCore::GtkPopupMenu::typeAheadFind(GdkEventKey*)': Source/WebCore/platform/gtk/GtkPopupMenu.cpp:181:77: error: invalid static_cast from type 'short unsigned int*' to type 'UChar* {aka wchar_t*}' Source/WebCore/platform/gtk/GtkPopupMenu.cpp:183:82: error: invalid static_cast from type 'short unsigned int*' to type 'UChar* {aka wchar_t*}' make[1]: *** [Source/WebCore/platform/gtk/libWebCoreGtk_la-GtkPopupMenu.lo] Error 1
Attachments
Patch
(2.50 KB, patch)
2012-02-19 09:56 PST
,
Kalev Lember
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kalev Lember
Comment 1
2012-02-19 09:56:45 PST
Created
attachment 127734
[details]
Patch
WebKit Review Bot
Comment 2
2012-02-19 11:16:46 PST
Comment on
attachment 127734
[details]
Patch Clearing flags on attachment: 127734 Committed
r108191
: <
http://trac.webkit.org/changeset/108191
>
WebKit Review Bot
Comment 3
2012-02-19 11:16:54 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug