[GTK] Fix build on platforms where UChar is wchar_t https://bugs.webkit.org/show_bug.cgi?id=78996

Patch by Kalev Lember <kalevlember@gmail.com> on 2012-02-19
Reviewed by Martin Robinson.

The ICU backend defines UChar as wchar_t for platforms where wchar_t is
16 bits wide, e.g. win32.

* platform/graphics/pango/FontPango.cpp:
(WebCore::utf16ToUtf8): Use reinterpret_cast instead of static_cast.
* platform/gtk/GtkPopupMenu.cpp:
(WebCore::GtkPopupMenu::typeAheadFind): Ditto.

Canonical link: https://commits.webkit.org/96017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108191 268f45cc-cd09-0410-ab3c-d52691b4dbfc